# keyless-zk-proofs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  dev_setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-image.yaml  run-tests.yaml
circuit/: Cargo.toml  README.md
circuit/src/: arrays.rs  base64.rs  bigint.rs  hash_to_field.rs  jwt_field_parsing.rs  lib.rs  misc.rs  packing.rs  rsa.rs  sha.rs
circuit/templates/: mainTemplate.circom
circuit/templates/helpers/: arrays.circom  base64.circom  hashtofield.circom  jwt_field_parsing.circom  misc.circom  packing.circom  sha.circom
circuit/templates/helpers/rsa/: bigint.circom  fp.circom
circuit/templates/tests/arrays/: array_selector_complex_test.circom
circuit/templates/tests/misc/: brackets_depth_map_test.circom  brackets_map_test.circom
circuit/tools/: create-proofs-for-testing.sh  input_gen.py  install-deps.sh
git-hooks/: compile-circom-if-needed-pre-commit
keyless-common/src/input_processing/: circuit_input_signals.rs  config.rs  encoding.rs
prover/: Cargo.toml  Dockerfile  README.md  config.yml  config_local_testing.yml  config_local_testing_new_setup_specified.yml  config_local_testing_new_setup_unspecified.yml
prover-service/: Cargo.toml  Dockerfile  README.md  circuit_config.yml  config.yml  config_local_testing.yml
prover-service/resources/toy_circuit/: README.md
prover-service/scripts/: dev_setup.sh
prover-service/src/: api.rs  config.rs  groth16_vk.rs  handlers.rs  main.rs  prover_key.rs  state.rs  witness_gen.rs
prover-service/src/input_processing/: field_check_input.rs  public_inputs_hash.rs  types.rs
prover-service/src/tests/: jwk_fetching.rs  smoke.rs  training_wheels.rs
prover-service/src/tests/common/: mod.rs  types.rs
prover-service/src/training_wheels/: sign.rs  verification_logic.rs
prover/resources/: README.md
prover/scripts/: dev_setup.sh
prover/src/: api.rs  config.rs  handlers.rs  main.rs  state.rs
prover/src/input_processing/: field_check_input.rs  mod.rs  preprocess.rs
prover/src/tests/: training_wheels.rs
prover/src/tests/common/: mod.rs  types.rs
prover/src/training_wheels/: verification_logic.rs
rust-rapidsnark/: Cargo.toml  README.md  build.rs
rust-rapidsnark/rapidsnark/: README.md  build_lib.sh  meson.build
rust-rapidsnark/rapidsnark/src/: curve.cpp  curve.hpp  exp.hpp  f2field.cpp  f2field.hpp  fft.cpp  fft.hpp  fft_old.cpp  fq.cpp  fq.hpp  fq_raw_generic.cpp  fr.cpp  fr.hpp  groth16.cpp  groth16.hpp  multiexp.cpp  multiexp.hpp  naf.hpp  pointparallelprocessor.hpp  test.txt  wtns_utils.hpp  zkey_utils.hpp
rust-rapidsnark/rapidsnark/subprojects/: oneTBB.wrap  scope_guard.wrap
scripts/: README.md  prepare_setups.py  task.sh  utils.py
scripts/python/: circuit.py  main.py  misc.py  prover_service.py
scripts/python/setups/: __init__.py  cache.py  ceremony_setup.py  gh_release.py  testing_setup.py
scripts/python/trusted_setup/: __init__.py  prepare_setups.py
scripts/python/utils/: __init__.py  manage_deps.py
vk-diff/: Cargo.toml  README.md
vk-diff/src/: groth16_vk.rs  main.rs
